# byu_kaggle_project

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  pyproject.toml  requirements.txt
notebooks/: 02_cay_sandbox.ipynb  initialization.ipynb  main.ipynb  tb_viewer.ipynb  test.py  vizualize.ipynb
scripts/: setup.sh  setup_cuda.sh  setup_ssh.sh
src/app/: .gitignore  __init__.py  launcher.py
src/app/config/: __init__.py  config.py  config.yaml  resolvers.py
src/app/data/: __init__.py  datasets.py  transforms.py
src/app/losses/: __init__.py  focal_loss.py
src/app/metrics/: __init__.py  metrics.py
src/app/models/: __init__.py  lightning.py  models.py
src/app/processings/: __init__.py  post_processing.py
src/app/trainers/: __init__.py  lightning.py  tpu.py
src/app/utils/: __init__.py  utils.py
