[project]
name = "byu-kaggle-project"
version = "0.1.0"
description = ""
authors = [{ name = "YEBOUET Cédrick-Armel" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "torch (>=2.6.0,<2.7.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
matplotlib = "^3.10.1"
pre-commit = "^4.2.0"
black = "^25.1.0"

[[tool.poetry.source]]
name = "libtpu-wheels"
url = "https://storage.googleapis.com/libtpu-wheels/index.html"
priority = "explicit"


[[tool.poetry.source]]
name = "libtpu-releases"
url = "https://storage.googleapis.com/libtpu-releases/index.html"
priority = "explicit"

[tool.pylint.format]
max-line-length = "88"
