[project]
name = "app"
version = "0.1.0"
description = ""
authors = [{ name = "YEBOUET Cédrick-Armel" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.6.0,<2.7.0)",
    "torch-xla (>=2.6.1,<2.7.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "monai[all] (>=1.4.0,<1.5.0)",
    "libtpu (==0.0.7.1)",
]
packages = [{ include = "app", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
matplotlib = "^3.10.1"
pre-commit = "^4.2.0"
black = "^25.1.0"

[tool.poetry.scripts]
train = 'app.launcher:main'

[[tool.poetry.source]]
name = "libtpu-wheels"
url = "https://storage.googleapis.com/libtpu-wheels/index.html"
priority = "explicit"

[[tool.poetry.source]]
name = "libtpu-releases"
url = "https://storage.googleapis.com/libtpu-releases/index.html"
priority = "explicit"

[tool.poetry.dependencies]
libtpu = { source = "libtpu-wheels" }
[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages-control]
disable = []

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
